# Cymise_python_desktop

./: README.md  pyproject.toml  run_cymise.py
cymise_dtdl_validator/Cymise.DtdlValidator/: Cymise.DtdlValidator.csproj  Cymise.DtdlValidator.slnx  Program.cs
docs/: BACKLOG.md  DEV_SETUP.md  STACK_DECISION.md  invalidedtmi.json
samples/dtdl/: thermostat.json
scripts/: format.ps1  lint.ps1  test.ps1
src/cymise/: __init__.py
src/cymise/dtdl/: __init__.py  dotnet_validator.py  exporter.py  importer.py  preflight.py  validation_types.py
src/cymise/extract/: freecad_extractor.py  kicad_extractor.py
src/cymise/graph/: service.py  types.py
src/cymise/impact/: __init__.py  service.py
src/cymise/revision_diff/: __init__.py  service.py
src/cymise/stitch/: __init__.py  service.py
src/cymise/store/: db.py  models.py  repo.py
src/cymise/tools/: launcher.py
src/cymise/ui/: __init__.py  app.py  impact_logic.py  main_window.py
src/cymise/ui/views/: graph_view.py  (+4 more)
src/cymise/watch/: file_watcher.py  job_queue.py
tests/: test_dotnet_validator_adapter.py  test_dtdl_exporter.py  test_dtdl_importer.py  test_dtdl_preflight.py  test_file_watcher.py  test_freecad_extractor.py  test_graph_canvas_bridge.py  test_graph_service.py  test_graph_service_file_objects.py  test_graph_service_relationship_update.py  test_graph_view_payload.py  test_impact_service.py  test_impact_view_logic.py  test_kicad_extractor.py  test_launcher.py  test_properties_panel.py  test_revision_diff_service.py  test_smoke.py  test_stitch_service.py  test_store_models.py  test_validation_view.py
(+3 files in other folders)
